--- a/custom_theme/main-nav.html
+++ b/custom_theme/main-nav.html
@@ -1,4 +1,4 @@
-<nav id="mainnav" class="navbar navbar-default navbar-expand-md navbar-light sticky-top" role="navigation">
+<nav id="mainnav" class="navbar navbar-default navbar-expand-md navbar-light sticky-top py-2" role="navigation">
   
     {%- block site_name %}
     <a class="navbar-brand" href="{{ nav.homepage.url|url }}" title="{{ config.site_name }}">
@@ -10,7 +10,7 @@
     </button>
     <div id="mainnav-navbar-collapse" class="collapse navbar-collapse">
       {%- block site_nav %}
-      <ul class="nav navbar-nav mr-auto mx-auto">
+      <ul class="nav navbar-nav ml-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Learn</a>
           <ul class="dropdown-menu">
