--- a/custom_theme/side-nav.html
+++ b/custom_theme/side-nav.html
@@ -1,4 +1,4 @@
-<nav id="sidenav" class="navbar navbar-default navbar-expand-md" role="navigation">
+<nav id="sidenav" class="navbar navbar-default navbar-expand-md navbar-light" role="navigation">
   <a class="navbar-brand d-block d-md-none d-xl-none" href="#"><i class="fa fa-book fa-fw"></i> Documentation</a>
   <button class="navbar-toggler ml-auto hidden-sm-up float-xs-right" type="button" data-toggle="collapse" data-target="#sidebar-navbar-collapse" aria-controls="sidebar-navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
