--- a/site/electrum/index.html
+++ b/site/electrum/index.html
@@ -36,7 +36,7 @@
   </head>
   
   <body class="" data-spy="scroll" data-target="#toc">
-    <nav id="mainnav" class="navbar navbar-default navbar-expand-md navbar-light sticky-top" role="navigation">
+    <nav id="mainnav" class="navbar navbar-default navbar-expand-md navbar-light sticky-top py-2" role="navigation">
     <a class="navbar-brand" href=".." title="PKT Documentation">
       <img src="../assets/logo-dark.svg" alt="PKT Documentation">
     </a>
@@ -44,7 +44,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div id="mainnav-navbar-collapse" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav mr-auto mx-auto">
+      <ul class="nav navbar-nav ml-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Learn</a>
           <ul class="dropdown-menu">
@@ -95,10 +95,10 @@
       </ul>
     </div>
 </nav>
-    <div id="content"class="container-fluid">
+    <div id="content"class="container">
       
     <div class="row">
-      <div id="sidebar-nav" class="sidebar col-md-3"><nav id="sidenav" class="navbar navbar-default navbar-expand-md" role="navigation">
+      <div id="sidebar-nav" class="sidebar col-md-3"><nav id="sidenav" class="navbar navbar-default navbar-expand-md navbar-light" role="navigation">
   <a class="navbar-brand d-block d-md-none d-xl-none" href="#"><i class="fa fa-book fa-fw"></i> Documentation</a>
   <button class="navbar-toggler ml-auto hidden-sm-up float-xs-right" type="button" data-toggle="collapse" data-target="#sidebar-navbar-collapse" aria-controls="sidebar-navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -289,7 +289,7 @@
   </div>
 </nav>
 </div>
-      <div id="main" class="col" role="main">
+      <div id="main" class="col-md-7" role="main">
 
 
 <nav aria-label="breadcrumb">
@@ -455,11 +455,11 @@
     </div><footer class="col-md-12">
   <nav class="container">
     <div class="row">
-      <div class="col-5">
+      <div class="col-md-5 col-sm-12">
 		<a class="navbar-brand" href="..">
           <img src="../assets/logo.svg" alt="PKT Documentation">
 		</a>
-		<ul class="c-footer__logo_social nav flex-row ml-md-auto d-none d-md-flex">
+		<ul class="c-footer__logo_social nav flex-row ml-md-auto d-md-flex">
 			<li class="c-footer__menu-item">
 				<a href="https://pkt.chat" target="_blank" class="c-footer__menu-link"><span class="c-footer__menu-text"><img src="../assets/pkt-chat.svg" alt="pkt.chat" width="24"></span></a>
 			</li>
